@@ -1,6 +1,6 @@
 <!--
    This file contains a listing of public holidays in the U.S.
-   for the years 2000-2002.
+   for the years 2000-2003.
    - Sidney Chong [sidney@gamebox.net] (16/12/2001)
 -->
 
@@ -9,7 +9,7 @@
      <date day="1" month="1"/>
   </event>
   <event name="Martin Luther King Day" type="public_holiday">
-     <date day="21" month="1" year="2002"/>
+     <date day="20" month="1" year="2003"/>
   </event> 
   <event name="GroundHog Day" type="public_holiday">
      <date day="2" month="2"/>
@@ -18,43 +18,43 @@
      <date day="14" month="2"/>
   </event>
   <event name="Presidents Day" type="public_holiday">
-     <date day="18" month="2" year="2002"/>
+     <date day="17" month="2" year="2003"/>
   </event>
   <event name="St Patricks Day" type="public_holiday">
      <date day="17" month="3"/>
   </event>
   <event name="Easter" type="public_holiday">
-     <date day="31" month="3" year="2002"/>
+     <date day="20" month="4" year="2003"/>
   </event>
   <event name="April Fools" type="public_holiday">
      <date day="1" month="4"/>
   </event>
     <event name="Daylight Savings Time Begins" type="public_holiday">
-       <date day="7" month="4" year="2002"/>
+       <date day="7" month="6" year="2003"/>
     </event>
   <event name="Mothers Day" type="public_holiday">
-     <date day="12" month="5" year="2002"/>
+     <date day="11" month="5" year="2003"/>
   </event>
   <event name="Memorial Day" type="public_holiday">
-     <date day="27" month="5" year="2002"/>
+     <date day="26" month="5" year="2003"/>
   </event>
   <event name="Fathers Day" type="public_holiday">
-     <date day="16" month="6" year="2002"/>
+     <date day="15" month="6" year="2003"/>
   </event>
   <event name="Independence day" type="public_holiday">
      <date day="4" month="7" />
   </event>
   <event name="Labor Day" type="public_holiday">
-     <date day="2" month="9" year="2002"/>
+     <date day="1" month="9" year="2003"/>
   </event>
     <event name="Daylight Savings Time Ends" type="public_holiday">
-       <date day="27" month="10" year="2002"/>
+       <date day="26" month="10" year="2003"/>
     </event>
   <event name="Halloween" type="public_holiday">
      <date day="31" month="10"/>
   </event>
   <event name="Thanksgiving" type="public_holiday">
-     <date day="28" month="11" year="2002"/>
+     <date day="27" month="11" year="2003"/>
   </event>
   <event name="Christmas" type="public_holiday">
      <date day="25" month="12"/>
